# gpu_fft

./: .gitignore  CMakeLists.txt  LICENSE  OPEN ME.unity  README.md  fft.shader  fft_ref.mat  generate_fft_reference.py  generate_twiddle_tables.py  gpu_fft.cc  mandrill_256x256.exr
CRT Mats/: fft_256x256_r16_0.mat  fft_256x256_r16_1.mat  fft_256x256_r16_2.mat  fft_256x256_r16_3.mat  fft_256x256_r16_3_bitrev.mat  ifft_256x256_r16_0.mat  ifft_256x256_r16_1.mat  ifft_256x256_r16_2.mat  ifft_256x256_r16_3.mat  ifft_256x256_r16_3_bitrev.mat  passthrough.mat
CRTs/: fft_256x256_r16_0.asset  fft_256x256_r16_1.asset  fft_256x256_r16_2.asset  fft_256x256_r16_3.asset  fft_stage0.renderTexture  fft_stage1.renderTexture  fft_stage2.renderTexture  fft_stage3.renderTexture  fft_stage3_bitrev.renderTexture  ifft_256x256_r16_0.asset  ifft_256x256_r16_1.asset  ifft_256x256_r16_2.asset  ifft_256x256_r16_3.asset  ifft_stage0.renderTexture  ifft_stage1.renderTexture  ifft_stage2.renderTexture  ifft_stage3.renderTexture  ifft_stage3_bitrev.renderTexture  passthrough.asset  passthrough.renderTexture
Scripts/: LinearPipeline.asset  LinearPipeline.cs  PipelineExecutor.asset  PipelineExecutor.cs
Scripts/Editor/: LinearPipelineEditor.cs  PipelineExecutorEditor.cs
